Update FISKL / T Defconfigs for release

--- a/arch/arm64/configs/T_defconfig
+++ b/arch/arm64/configs/T_defconfig
@@ -37,8 +37,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-S6plus_StockAR_AOH6-T"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -129,7 +129,7 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
 # CONFIG_RD_BZIP2 is not set
-# CONFIG_RD_LZMA is not set
+CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
@@ -295,7 +295,6 @@ CONFIG_S5P_SLEEP=y
 CONFIG_ARCH_EXYNOS7=y
 CONFIG_SOC_EXYNOS7420=y
 # CONFIG_SOC_EXYNOS7420_EVT_0 is not set
-# CONFIG_SOC_EXYNOS7580 is not set
 CONFIG_EXYNOS_ASV=y
 # CONFIG_EXYNOS_ASV_DYNAMIC_ABB is not set
 CONFIG_EXYNOS_ASV_SUPPORT_RCC=y
@@ -313,8 +312,6 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 #
 # CONFIG_MACH_ESPRESSO7420 is not set
 CONFIG_MACH_UNIVERSAL7420=y
-# CONFIG_MACH_SMDK7580 is not set
-# CONFIG_MACH_UNIVERSAL7580 is not set
 CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
@@ -438,7 +435,8 @@ CONFIG_ARMV7_COMPAT_CPUINFO=y
 # Boot options
 #
 CONFIG_CMDLINE=""
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zenlte_usa_09"
 
 #
 # Userspace binary formats
@@ -647,6 +645,8 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
 # CONFIG_NETLABEL is not set
+# CONFIG_MPTCP is not set
+CONFIG_DEFAULT_MPTCP_PM="default"
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_NETWORK_SECMARK=y
@@ -2687,9 +2687,6 @@ CONFIG_PANEL_S6E3HF3_DYNAMIC=y
 CONFIG_PANEL_DUALIZATION=y
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA0 is not set
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA2 is not set
-# CONFIG_EXYNOS_DECON_DUAL_DISPLAY is not set
-# CONFIG_PANEL_S6E3FA3 is not set
-# CONFIG_EXYNOS_DECON_DUAL_DSI is not set
 
 #
 # Mhl device support
@@ -4470,6 +4467,7 @@ CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_LZMA=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
